check logic and telegram